--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,27 @@ body {
     width: 480px;
     display: flex;
     justify-content: space-around;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
     text-align: center;
     color: #2b2839;
-    background-color: #ddebf8;
-    border-bottom: 5px solid #d8cefe;
-}
-
-.border-blue {
-    border: 1px dotted blue;
+    background-color: #e6f2ff;
+    border-bottom: 6px solid #b875c3;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    box-shadow: 4px 2px 5px purple;
 }
 
 img {
-    border: 3px solid rgb(255, 243, 243);
+    border: 3px solid #d283ff;
+}
+
+h3:hover {
+    color: #9a08e9;
+}
+
+p:hover {
+    color: #97dffc;
+}
+
+h4:hover {
+    color: #d50e0e;
 }
